src/cryptoapp.css
.coin-container{
    display: flex;
    justify-content: center;
    width:100%;
    height:100%;
}

.coin-row{
    display: flex;
    flex-direction: row;
    justify-items: start;
    align-items: center;
    height:12vh;
    border-bottom: 1px solid #d7d7d7;
    width:99%;
}
.coin{
    display: flex;
    align-items: center;
    width:50%;
    justify-content: space-around;
    text-align: left;
    height: 100%;   
}

.coin img{
    height:40px;
    width: 40px;
    margin-right: 10px;
}

.coin h1{
    width: 30%;
}
.coin h2{
    font-size: 175%;
}
.coin-symbol{
    width:15%;
    font-size:150%;
}
.coin-data{
    display: flex;
    text-align: center;
    justify-content: space-between;
    width:50%;
    margin:0 auto;
    height: 100%;
    font-size: 150%;
}

.coin-price{
    display: flex;
    width:25%;
    align-items: center;
}

.coin-marketcap{
    width:40%;
    display: flex;
    align-items: center;
}

.coin-percent{
    width:15%;
    display: flex;
    align-items: center;
}
.favoritebutton{
    display: flex;
    align-items: center;
    margin-right: 3%;
    height: 100%;
    width:5%;
    margin-left: 2%;
}   
.checkbox{
    max-height: 100%;
    height:100px;
    width: 100px;
}
.red{
    color: #f00606;
}
.green{
    color: #11d811;
}

.infobar{
    margin-top: 3%;
    font-size: 150%;
}

@media only screen and (max-width:1200px){
    .CryptoApp{
        font-size: 80%;
    }
    .coin h1{
        font-size: 130%
    }
    .coin img{
        height:25px;
        width: 25px;
        margin-right: 10px;
    }
}
@media only screen and (max-width:1400px){
    .coin h1{
        font-size: 130%
    }
}
@media only screen and (max-width:850px){
    .CryptoApp{
        font-size: 60%;
    }
}

@media only screen and (max-width:650px){
    .CryptoApp{
        font-size: 50%;
    }
}

@media only screen and (max-width:520px){
    .sortbutton{
        font-size:120%;
    }
    .CryptoApp{
        font-size: 45%;
    }
    .coin img{
        height:20px;
        width: 20px;
        margin-right: 10px;
    }
    .favoritebutton{
        width: 10%;
    }
    .percentchange24{
        font-size: 80%
    }
}
@media only screen and (max-width:400px){
    .CryptoApp{
        font-size: 35%;
    }
}
@media only screen and (max-width:300px){
    .CryptoApp{
        font-size: 30%;
    }
}
@media only screen and (min-width:1400px){
    .themeselect{
        height: 80px;
        width: 80px;
    }
    .search-input{
        font-size: 120%;
    }
    .sortbutton{
        font-size:140%;
        width: 15%;
        margin-left: 80%;
    }
    .coin h1{
        font-size: 150%
    }
}
@media only screen and (min-width:1550px){
    .CryptoApp{
        font-size: 150%;
    }
    .coin img{
        height:60px;
        width: 60px;
        margin-right: 10px;
    }
    .themeselect{
        height: 100px;
        width: 100px;
    }
    .search-input{
        font-size: 150%;
    }
}

@media only screen and (min-width:2000px){
    .CryptoApp{
        font-size: 170%;
    }
}

